Add versioned documentation site and release workflows